.ci/kustomize/overlays/uat/app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 80
  tls:
  - hosts:
    - REPLACE_ME
    secretName: docsuat-devops-ans-uk-tls
